# word_converter

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: IInput.h  IOutput.h  IStateTextValue.h  InputParserLine.h  OutputConsole.h  OutputFile.h  StateTextValueConnector.h  StateTextValueFactor.h  StateTextValueLiteral.h  TextValue.h  ThreadPool.h  Translator.h
src/: IStateTextValue.cpp  InputParserLine.cpp  OutputConsole.cpp  OutputFile.cpp  StateTextValueConnector.cpp  StateTextValueFactor.cpp  StateTextValueLiteral.cpp  TextValue.cpp  Translator.cpp
test/: t0.txt  t1.txt  t2.txt
